@@ -16,7 +16,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-1",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore1"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -45,7 +45,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-2",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore2"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -74,7 +74,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-3",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore3"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -103,7 +103,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-4",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore4"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -132,7 +132,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-5",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore5"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -161,7 +161,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-6",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore6"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -190,7 +190,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-7",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore7"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -219,7 +219,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-8",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore8"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
@@ -248,7 +248,7 @@ if mods['Clowns-Extended-Minerals'] then
       {
         type = "recipe",
         name = "sb-slag-processing-clowns-9",
-        localised_name={"recipe-name.slag-processing", {"item-name.clowns-ore1"}},
+        localised_name={"recipe-name.slag-processing", {"item-name.clown-mat", {"entity-name.clowns-ore9"}, "Ore"}},
         category = "crystallizing",
         subgroup = "slag-processing-2",
         enabled = false,
