@@ -15,6 +15,7 @@ Date: ???
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
+    - Fixed localised name of Mad Clown's Ore crystallization recipes
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.3
 Date: 06.03.2021
